--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedevs</title>
+    <title>Naruto</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -13,164 +13,165 @@
 
 </head>
 <body>
-    <main>
-        <div class="container ">
-            <h1 class="titulo-principal">Poke-Devs</h1>
-        </div>
-        <div class="pokedevs">
-            <div class="cartoes-pokedev">
 
-                <div class="cartao-pokedev tipo-eletrico aberto" id="cartao-devchu">
+    <div class="titulo-container">
+        <img src="./src/imagens/logo-naruto.png" alt="Naruto Title Image" class="titulo-imagem">
+    </div>
+
+    <main>
+        <div class="narutoP">
+            <div class="cartoes-naruto">
+
+                <div class="cartao-naruto tipo-usumaki aberto" id="cartao-devchu">
                     <div class="cartao-topo">
                         <div class="detalhes">
-                            <h2 class="nome">Devchu</h2>
+                            <h2 class="nome">Naruto</h2>
                             <span>#001</span>
                         </div><!--detalhes-->
-                        <span class="tipo">Eletrico</span>
+                        <span class="tipo">Usumaki</span>
                         <div class="cartao-imagem">
-                            <img src="./src/imagens/devchu.png" alt="Devchu">
+                            <img src="./src/imagens/naruto.png" alt="Devchu">
                         </div><!--cartao-imagem-->
                     </div><!--cartao-topo-->
                     <div class="cartao-informacoes">
                         <div class="descricao">
                             <h3>Descriçao</h3>
-                            <p>Quando se depara com um erro no código, fica bastante irritado. Sente a tensão acumulada em cada músculo, com se estivesse prestes a soltar raios pelos dedos. Mas, em vez de se deixar abater, canaliza toda essa energia em busca da solução. Cada linha de código é examinada e ele não descansa até que o erro seja encontrado e corrigido
+                            <p>Naruto Uzumaki, um jovem ninja rejeitado por abrigar a Raposa de Nove Caudas dentro de si. Ele sonha em se tornar Hokage, o líder de sua vila. Ao longo da jornada, Naruto forma amizades com Sasuke e Sakura, enfrentando inimigos poderosos e desafios. Sasuke, buscando vingança por seu clã, abandona a vila, criando uma rivalidade entre os dois. A história foca no crescimento de Naruto, suas batalhas, e o desejo de ser reconhecido
                             </p>
                         </div><!--descricao-->
                     </div><!--cartao-informacoes-->
-                </div><!--cartao-pokedev-devchu-->
+                </div><!--cartao-naruto-usumaki-->
 
-                <div class="cartao-pokedev tipo-fogo" id="cartao-codevee">
+                <div class="cartao-naruto tipo-sasuke" id="cartao-codevee">
                     <div class="cartao-topo">
                         <div class="detalhes">
-                            <h2 class="nome">Codevee</h2>
-                            <span>#003</span>
-                        </div><!--detalhes-->
-                        <span class="tipo">fogo</span>
-                        <div class="cartao-imagem">
-                            <img src="./src/imagens/codevee.png" alt="Codevee">
-                        </div><!--cartao-imagem-->
-                    </div><!--cartao-topo-->
-                    <div class="cartao-informacoes">
-                        <div class="descricao">
-                            <h3>Descriçao</h3>
-                            <p>Sua capacidade de evoluir continuamente permite que ele se adapte de forma eficaz a qualquer ambiente de
-                                desenvolvimento. Isso reflete a flexibilidade e a capacidade de aprendizado contínuo que são essenciais para umdesenvolvedor pleno</p>
-                        </div><!--descricao-->
-                    </div><!--cartao-informacoes-->
-                </div><!--cartao-pokedev-codevee-->
-
-                <div class="cartao-pokedev tipo-agua"  id="cartao-psycoder">
-                    <div class="cartao-topo">
-                        <div class="detalhes">
-                            <h2 class="nome">Psycoder</h2>
-                            <span>#022</span>
-                        </div><!--detalhes-->
-                        <span class="tipo">agua</span>
-                        <div class="cartao-imagem">
-                            <img src="./src/imagens/psycoder.png" alt="Psycoder">
-                        </div><!--cartao-imagem-->
-                    </div><!--cartao-topo-->
-                    <div class="cartao-informacoes">
-                        <div class="descricao">
-                            <h3>Descriçao</h3>
-                            <p>Um pokedev sênior constantemente atormentado por uma dor de cabeça persistente. Quando a dor se torna intensa demais,consegue acessar habilidades de programação extraordinárias, resolvendo problemas complexos com uma facilidade surpreendente.</p>
-                        </div><!--descricao-->
-                    </div><!--cartao-informacoes-->
-                </div><!--cartao-pokedev-psycoder-->
-
-                <div class="cartao-pokedev tipo-grama" id="cartao-charmandev">
-                    <div class="cartao-topo">
-                        <div class="detalhes">
-                            <h2 class="nome">Charmandev</h2>
-                            <span>#015</span>
-                        </div><!--detalhes-->
-                        <span class="tipo">Fogo</span>
-                        <div class="cartao-imagem">
-                            <img src="./src/imagens/charmandev.png" alt="Charmandev">
-                        </div><!--cartao-imagem-->
-                    </div><!--cartao-topo-->
-                    <div class="cartao-informacoes">
-                        <div class="descricao">
-                            <h3>Descriçao</h3>
-                            <p>Este pokedev nunca deixa a chama do aprendizado se apagar! Está sempre se atualizando, pois sabe que um bom desenvolvedor deve ser resiliente e adaptável às mudanças constantes no mundo da tecnologia. Estar aberto a aprender novas ferramentas e metodologias é crucial.</p>
-                        </div><!--descricao-->
-                    </div><!--cartao-informacoes-->
-                </div><!--cartao-pokedev-charmandev-->
-
-                <div class="cartao-pokedev tipo-trevas" id="cartao-scriptle">
-                    <div class="cartao-topo">
-                        <div class="detalhes">
-                            <h2 class="nome">Scriptle</h2>
+                            <h2 class="nome">Sasuke</h2>
                             <span>#002</span>
                         </div><!--detalhes-->
-                        <span class="tipo">Agua</span>
+                        <span class="tipo">Uchiha</span>
                         <div class="cartao-imagem">
-                            <img src="./src/imagens/scriptle.png" alt="Scriptle">
+                            <img src="./src/imagens/sasuke.png" alt="Codevee">
                         </div><!--cartao-imagem-->
                     </div><!--cartao-topo-->
                     <div class="cartao-informacoes">
                         <div class="descricao">
                             <h3>Descriçao</h3>
-                            <p>Mesmo sendo um programador iniciante, este pokedev já domina habilidades fundamentais em Javascript como: Depurar o código, Manipulação do DOM, Trabalhar com APIs, Conhecimento de frameworks e bibliotecas tornando o código mais eficiente.</p>
+                            <p>Sasuke Uchiha é um dos principais personagens de Naruto. Ele vem do clã Uchiha, conhecido por seu poderoso dojutsu, o Sharingan. Quando criança, seu irmão mais velho, Itachi Uchiha, massacra todo o clã, deixando Sasuke como o único sobrevivente. Isso desperta nele um desejo intenso de vingança</p>
                         </div><!--descricao-->
                     </div><!--cartao-informacoes-->
-                </div><!--cartao-pokedev-scriptle-->
+                </div><!--cartao-naruto-sasuke-->
 
-                <div class="cartao-pokedev tipo-fada" id="cartao-devlypuff">
+                <div class="cartao-naruto tipo-sakura"  id="cartao-psycoder">
                     <div class="cartao-topo">
                         <div class="detalhes">
-                            <h2 class="nome">Devlypuff</h2>
-                            <span>#062</span>
+                            <h2 class="nome">Sakura</h2>
+                            <span>#003</span>
                         </div><!--detalhes-->
-                        <span class="tipo">Fada</span>
+                        <span class="tipo">Haruno</span>
                         <div class="cartao-imagem">
-                            <img src="./src/imagens/devlypuff.png" alt="Devlypuff">
+                            <img src="./src/imagens/sakura.png" alt="Sakura">
                         </div><!--cartao-imagem-->
                     </div><!--cartao-topo-->
                     <div class="cartao-informacoes">
                         <div class="descricao">
                             <h3>Descriçao</h3>
-                            <p>A expressão “trabalhe enquanto eles dormem” poderia ter sido facilmente criada por este pokedev. Afinal, ele tem o dom de codar por horas e horas, madrugada adentro, regado a muito café e energéticos. Sua dedicação é tão intensa que, enquanto a maioria das pessoas está descansando, ele está imerso em linhas de código, resolvendo problemas e criando soluções.</p>
+                            <p>Sakura Haruno é uma ninja do Time 7, junto com Naruto e Sasuke. No início, ela é apaixonada por Sasuke e insegura sobre suas habilidades, mas ao longo da série, Sakura cresce como guerreira. Ela treina com Tsunade, uma das Sannin Lendários, e se torna uma ninja médica excepcional, ganhando grande força física e habilidades de cura.</p>
                         </div><!--descricao-->
                     </div><!--cartao-informacoes-->
-                </div><!--cartao-pokedev-scriptle-->
+                </div><!--cartao-naruto-sakura-->
 
-            </div><!--cartoes-pokedev-->
+                <div class="cartao-naruto tipo-kakashi" id="cartao-charmandev">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Kakashi</h2>
+                            <span>#004</span>
+                        </div><!--detalhes-->
+                        <span class="tipo">Hataki</span>
+                        <div class="cartao-imagem">
+                            <img src="./src/imagens/kakashi.png" alt="Kakashi">
+                        </div><!--cartao-imagem-->
+                    </div><!--cartao-topo-->
+                    <div class="cartao-informacoes">
+                        <div class="descricao">
+                            <h3>Descriçao</h3>
+                            <p>Kakashi Hatake é o líder do Time 7 e mentor de Naruto, Sasuke e Sakura. Ele é um ninja habilidoso com o Sharingan e tem um passado trágico. Kakashi guia e protege seus alunos, enfrentando inimigos e defendendo a Vila Oculta da Folha.</p>
+                        </div><!--descricao-->
+                    </div><!--cartao-informacoes-->
+                </div><!--cartao-naruto-kakashi-->
+
+                <div class="cartao-naruto tipo-jiraya" id="cartao-scriptle">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Jiraya</h2>
+                            <span>#005</span>
+                        </div><!--detalhes-->
+                        <span class="tipo">mestre da colina do sapo</span>
+                        <div class="cartao-imagem">
+                            <img src="./src/imagens/jiraya.png" alt="Jiraya">
+                        </div><!--cartao-imagem-->
+                    </div><!--cartao-topo-->
+                    <div class="cartao-informacoes">
+                        <div class="descricao">
+                            <h3>Descriçao</h3>
+                            <p>Jiraiya é um dos Sannin Lendários e mentor de Naruto. Conhecido por seu humor e amor por mulheres, ele é um poderoso ninja e autor de livros. Jiraiya treina Naruto para desenvolver suas habilidades e se torna uma figura paterna para ele. Ele também busca informações sobre o vilão Pain e acaba sacrificando sua vida para proteger a vila e ajudar Naruto em sua luta.</p>
+                        </div><!--descricao-->
+                    </div><!--cartao-informacoes-->
+                </div><!--cartao-naruto-jiraya-->
+
+                <div class="cartao-naruto tipo-fada" id="cartao-devlypuff">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Minato</h2>
+                            <span>#006</span>
+                        </div><!--detalhes-->
+                        <span class="tipo">4 hokage</span>
+                        <div class="cartao-imagem">
+                            <img src="./src/imagens/pngwing.com.png" alt="Minato">
+                        </div><!--cartao-imagem-->
+                    </div><!--cartao-topo-->
+                    <div class="cartao-informacoes">
+                        <div class="descricao">
+                            <h3>Descriçao</h3>
+                            <p>Minato Namikaze, também conhecido como o Quarto Hokage, é o pai de Naruto e um dos ninjas mais poderosos da Vila Oculta da Folha. Ele é famoso por sua habilidade de teletransporte e por ter selado a Raposa de Nove Caudas dentro de seu filho, Naruto, para protegê-lo durante o ataque da besta. Minato é admirado por sua coragem e sacrifício, morrendo para salvar a vila e seus habitantes. Ele também deixa um legado importante como líder e figura inspiradora para Naruto.</p>
+                        </div><!--descricao-->
+                    </div><!--cartao-informacoes-->
+                </div><!--cartao-naruto-Minato-->
+
+            </div><!--cartoes-naruto-->
             <nav class="listagem">
                 <ul>
-                    <li class="pokedev ativo" id="devchu">
-                        <img src="./src/imagens/devchu.png" alt="Sevchu">
-                        <span>Devchu</span>
-                    </li><!--devchu-->
+                    <li class="naruto ativo" id="devchu">
+                        <img src="./src/imagens/pngwing.com (15).png" alt="Naruto">
+                        <span>Naruto</span>
+                    </li><!--Naruto-->
+
+                    <li class="naruto" id="codevee">
+                        <img src="./src/imagens/pngwing.com (15).png" alt="sasuke">
+                        <span>Sasuke</span>
+                    </li><!--Sasuke-->
+
+                    <li class="naruto" id="psycoder">
+                        <img src="./src/imagens/pngwing.com (15).png" alt="Sakura">
+                        <span>Sakura</span>
+                    </li><!--Sakura-->
+
+                    <li class="naruto" id="charmandev">
+                        <img src="./src/imagens/pngwing.com (15).png" alt="Kakashi">
+                        <span>Kakashi</span>
+                    </li><!--Kakashi-->
          
-                    <li class="pokedev" id="scriptle">
-                        <img src="./src/imagens/scriptle.png" alt="Scriptle">
-                        <span>Scriptle</span>
-                    </li><!--scriptle-->
+                    <li class="naruto" id="scriptle">
+                        <img src="./src/imagens/pngwing.com (15).png" alt="Jiraya">
+                        <span>Jiraya</span>
+                    </li><!--Jiraya-->
 
-                    <li class="pokedev" id="codevee">
-                        <img src="./src/imagens/codevee.png" alt="codevee">
-                        <span>Codevee</span>
-                    </li><!--scriptle-->
-
-                    <li class="pokedev" id="psycoder">
-                        <img src="./src/imagens/psycoder.png" alt="Psycoder">
-                        <span>Psycoder</span>
-                    </li><!--psycoder-->
-
-                    <li class="pokedev" id="charmandev">
-                        <img src="./src/imagens/charmandev.png" alt="Charmandev">
-                        <span>Charmandev</span>
-                    </li><!--charmandev-->
-
-                    <li class="pokedev" id="devlypuff">
-                        <img src="./src/imagens/devlypuff.png" alt="Devlypuff">
-                        <span>Devlypuff</span>
-                    </li><!--devlypuff-->                  
+                    <li class="naruto" id="devlypuff">
+                        <img src="./src/imagens/pngwing.com (15).png" alt="Minato">
+                        <span>Minato</span>
+                    </li><!--Minato-->                  
                 </ul>
             </nav><!--listagem-->
-        </div><!--pokedevs-->
+        </div><!--naruto-->
     </main>
     <script src="./src/js/index.js"></script>
 </body>
